# libFaceRecognition

./: CMakeLists.txt  README.md  initial_cache.cmake
libEnroll/: CMakeLists.txt
libEnroll/include/libEnroll/: EnrollmentEngine.hpp
libEnroll/src/libEnroll/: EnrollmentEngine.cpp
libLogging/: CMakeLists.txt
libLogging/include/libLogging/: Appender.hpp  ConsoleAppender.hpp  FileAppender.hpp  Logger.hpp  LoggerFactory.hpp
libLogging/src/libLogging/: ConsoleAppender.cpp  FileAppender.cpp  Logger.cpp  LoggerFactory.cpp
libMatching/: CMakeLists.txt
libMatching/include/libMatching/: MatchingEngine.hpp
libMatching/src/libMatching/: MatchingEngine.cpp
libUtilities/: CMakeLists.txt
libUtilities/include/: libImageConversion.hpp
libUtilities/src/: libImageConversion.cpp
